--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -247,8 +247,11 @@ and then the bikini.&ensp;Things went everywhere, snowing girl stuff.&ensp;
 <br/>&emsp;"Want to take yours off?" she asked.&ensp;This woman had octaves.&ensp;
 <br/>&emsp;"Sure."&ensp;I wasn't as graceful, but tried to be.&ensp;Standing.&ensp;Socks are spoilers.&ensp;
 <br/>&emsp;She crossed her ankles and turned in front of me like a ballerina on a music box.&ensp;
-No butt ink or body hair.&ensp;Ungilt and polished.&ensp;
-She looked younger, except for the smile.&ensp;It weighed at least ten years, perhaps a thousand.&ensp;
+No butt ink or body hair.&ensp;
+Preference versus causation.&ensp;
+The twirl likely just vroom.&ensp;
+Two-way foreplay.&ensp;
+That smile now assymetrical.&ensp;
 It stayed on.&ensp;
 <br/>&emsp;Morning came with the scrape and soft slam of the back door opening and closing.&ensp;
 <br/>&emsp;Out my window I saw the coach get into his Civic.&ensp;The Fastback was already gone.&ensp;I'd slept well.&ensp;I usually do.&ensp;
@@ -291,7 +294,7 @@ We picked our way down the cliff to the tiny beach.&ensp;I spread the new towels
 <br/>&emsp;Beverly smiled and pulled the joint and lighter from her bikini top.&ensp;
 <br/>&emsp;We had to get back into the chilly shade of the cliff to get enough out of the wind.&ensp;
 Two hits apiece and it was getting short.&ensp;I snuffed it against the ragged rock wall.&ensp;
-<br/>&emsp;Sitting on her towel under her big hat she reamarked:  "White caps."&ensp;
+<br/>&emsp;Sitting on her towel under her big hat she remarked:  "White caps."&ensp;
 <br/>&emsp;"Yeah, I was hoping it'd be a bit warmer.&ensp;Would be with less wind."&ensp;
 <br/>&emsp;She turned.&ensp;"Here."&ensp;She rolled onto her knees while pulling one leg from her panties and putting it
 across me.&ensp;Then she arched her back to unclip her top and let it slide down her arms.&ensp;
