--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -206,7 +206,7 @@ attracted a friendly challenger at the first red light.&ensp;Vroom, vroom.&ensp;
 <br/>&emsp;I looked at her.&ensp;"You see a cop?"&ensp;
 <br/>&emsp;"No, and I really don't want to."&ensp;
 <br/>&emsp;I turned to the guy on my left.&ensp;"Not tonight, man.&ensp;The lady isn't into it."&ensp;
-<br/>&emsp;He leaned over his wheel of his GTO to have a look, then laughed the laugh of the unemcumbered.&ensp;
+<br/>&emsp;He leaned over the wheel of his GTO to have a look, then laughed the laugh of the unemcumbered.&ensp;
 We waited through the long cycle, admiring each others' noises.&ensp;
 <br/>&emsp;She was watching the cross traffic and when it slowed she put her hand over mine as if to 
 help or prevent me shifting.&ensp;A picture is worth a thousand words, but a first direct touch 
@@ -259,7 +259,7 @@ because I didn't like my private thoughts to be ruled.&ensp;I used a Fountain Pe
 flexible tip.&ensp;Occasionally, a letter stroke would release tension and with it a delicate spray of blue.&ensp;
 <br/>&emsp;"You have nice penmanship."&ensp;
 <br/>&emsp;"So do you."&ensp;Silly, but my intent came across.&ensp;
-<br/>&emsp;She closed my journal.&ensp;
+<br/>&emsp;She closed my journal.&ensp;Nicely.&ensp;Virtually in it.&ensp;
 <br/>&emsp;At a nearby breakfast joint, as our plates arrived, she asked:  "So you can take the day off?"&ensp;
 <br/>&emsp;I'd called my office from the place's payphone.&ensp;"Nothing's on fire."&ensp;
 <br/>&emsp;"There, anyway."&ensp;
