--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -5,12 +5,12 @@
 <i> Apr. 28, 1987 </i>
 <p/>
 I'd been living in Willow Glen for a couple years.&ensp;It was a reasonably nice part of San Jose.&ensp;
-Older houses.&ensp;Ours was kind of strange.&ensp;It had a rather large kitchen with limited counter space,
-as though the architect had imagined a dining table at the end, with a door leading to the back yard
-and a bathroom near that door.&ensp;Everything in relentless yellow.&ensp;
+Older houses.&ensp;
+Ours had a long kitchen with limited counters and room for a breakfast table we didn't have.&ensp;
+Lino, walls, counters, cabinets and ceiling in relentless smiley yellow like some psych experiment.&ensp;
 <br/>&emsp;The driveway to the garage ran along that side of the house.&ensp;My Firebird was in the garage
 keeping my housemate's pot plants company.&ensp;I was convinced they were cross-odorizing each other.&ensp;
-The Bird smelled like indica and the bud tasted faintly of 10W-40 and tires.&ensp;
+The Bird smelled like indica and the bud tasted faintly of gasoline and tires.&ensp;
 <br/>&emsp;The house next door was the mirror layout of ours, so the driveways ran adjacent.&ensp;That house had
 been on the market and recently bought by a smarmy Armenian guy who promptly replaced the front lawn with 
 concrete so customers of his insurance business had somewhere to park.&ensp;No street parking on Curtner Avenue.&ensp;
@@ -18,9 +18,9 @@ concrete so customers of his insurance business had somewhere to park.&ensp;No s
 silent glide toward the back.&ensp;I had a dismount technique where, while gliding, I would stand on 
 the left foot peg and swing my right leg over the seat so that when I feathered the brake to a stop
 I'd be ready to flick the kickstand down, all in one fluid motion, much as I'd do on a bicyclc.&ensp;
-But I stopped at the front because, dancing around in a little pink bikini, was an attractive woman
-with a little watering can, sprinkling the new flowers edging the new concrete.&ensp;The flowers were pink too.&ensp;
-<br/>&emsp;She gracefully stepped over the flowers and put the tip of her index finger on the top edge of my
+But I stopped at the front because of the woman in the pink bikini with a little watering can 
+sprinkling the new bunches of flowers edging the new concrete.&ensp;The flowers were pink too.&ensp;
+<br/>&emsp;She sashayed between flowers to my side and put the tip of her index finger on the top edge of my
 bike's mirror and said:  "I like motorcycles."&ensp;
 <br/>&emsp;Pulling off my helmet gave me a few seconds.&ensp;I said:  "It doesn't need watering."&ensp;
 <br/>&emsp;"How 'bout you?"&ensp;She raised her can.&ensp;
