--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -120,7 +120,7 @@ he enabled the pump.&ensp;I filled the tank, and closed the cap.&ensp;"Be one se
 <br/>&emsp;Horns.&ensp;"Like what?"&ensp;
 <br/>&emsp;I pointed to a place down the street.&ensp;"Oysters Rockefeller."&ensp;
 <br/>&emsp;I spun us over there, parked and we got seats at the bar.&ensp;
-<br/>&emsp;Their arrival raised an eyebrow, but they were very pretty, lovely shells on a bed or rock salt,
+<br/>&emsp;Their arrival raised an eyebrow, but they were very pretty, lovely shells on a bed of rock salt,
 and when she saw me eat one she quickly followed suit.&ensp;Her expression was like watching a kaleidoscope
 that settled on fascination with what had happened in her mouth.&ensp;I ordered a glass of dry riesling
 for her.&ensp;
@@ -155,7 +155,7 @@ She assessed what the dome light revealed and got in.&ensp;
 <br/>&emsp;"Ooh."&ensp;
 <br/>&emsp;"I'll let it warm up a bit," I said.&ensp;The dome was off but I turned it back on.&ensp;
 <br/>&emsp;She was casually reclined and looking at me.&ensp;Between us was a prototype center console I had 
-cobbled from a large piece of smooth-sided rather stiff foam I'd found glued to the inside of a 
+whittled from a large piece of smooth-sided rather stiff foam I'd found glued to the inside of a 
 large cardboard box that had contained a very heavy piece of equipment delivered to a company
 sharing the parking lot where I worked.&ensp;It covered the transmission hump of the Firebird.&ensp;It was white,
 not matching the car's blue interor, a long, obviously owner-fabricated, flat surface.&ensp;
@@ -356,7 +356,7 @@ I don't think he had any real worries.&ensp;He didn't really own anything worth 
 get for a second-hand Speedo?&ensp;
 <br/>&emsp;As I turned back toward the house I found myself wondering how they even knew she'd spent the night.&ensp;
 Then I remembered her giggling at the cats.&ensp;And some other noises.&ensp;Jealous, Mr. Fastback.&ensp;
-If you aren't having fun, no one can,  But as I turned the knob, on another level, yep, driving into fog.&ensp;
+If you aren't having fun, no one can.&ensp;But as I turned the knob, on another level, yep, driving into fog.&ensp;
 <br/>&emsp;"Hey," I said to Beverly, "we're heading out for burgers."&ensp;
 <br/>&emsp;She powered off the TV and moved the cats.&ensp;They were sharing her lap.&ensp;Wise guys.&ensp;
 <br/>&emsp;She and I climbed into the back of the Fastback.&ensp;There was a hole in the vinyl seat about the size of a
