--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -6,7 +6,8 @@
 <p/>
 I'd been living in Willow Glen for a couple years.&ensp;It was a reasonably nice part of San Jose.&ensp;
 Older houses.&ensp;
-Ours had a long kitchen with limited counters and room for a breakfast table we didn't have.&ensp;
+Ours had a long kitchen running half the length of the east side of the house
+with limited counters and space for a breakfast table we didn't have.&ensp;
 Lino, walls, counters, cabinets and ceiling in relentless smiley yellow like some psych experiment.&ensp;
 <br/>&emsp;The driveway to the garage ran along that side of the house.&ensp;My Firebird was in the garage
 keeping my housemate's pot plants company.&ensp;I was convinced they were cross-odorizing each other.&ensp;
@@ -20,7 +21,9 @@ the left foot peg and swing my right leg over the seat so that when I feathered 
 I'd be ready to flick the kickstand down, all in one fluid motion, much as I'd do on a bicyclc.&ensp;
 But I stopped at the front because of the woman in the pink bikini with a little watering can 
 sprinkling the new bunches of flowers edging the new concrete.&ensp;The flowers were pink too.&ensp;
-<br/>&emsp;She sashayed between flowers to my side and put the tip of her index finger on the top edge of my
+<br/>&emsp;She sashayed between flowers and across the Armenian's driveway, and stepped over the low fence
+separating the properties.&ensp;
+She put the tip of her index finger on the top edge of my
 bike's mirror and said:  "I like motorcycles."&ensp;
 <br/>&emsp;Pulling off my helmet gave me a few seconds.&ensp;I said:  "It doesn't need watering."&ensp;
 <br/>&emsp;"How 'bout you?"&ensp;She raised her can.&ensp;
@@ -38,7 +41,7 @@ I had a spare leather jacket and gloves.&ensp;I had a helmet that would fit her,
 <br/>&emsp;"Okay.&ensp;When?"&ensp;
 <br/>&emsp;"Knock on the back door.&ensp;I've got to check my answering machine."&ensp;I did not.&ensp;But I needed to 
 find a helmet that didn't smell like perfume.&ensp;My last pillion jockey was a real spritzer.&ensp;
-<br/>&emsp;She leapt the flowers and loped down the Armenian's driveway in her flip flops.&ensp;I heard his back door 
+<br/>&emsp;She leapt the low fence and loped down the Armenian's driveway in her flip flops.&ensp;I heard his back door 
 open and close.&ensp;I pushed the bike to the front walk to make way in case either of my housemates came home.&ensp;
 My helmet collection was in the garage.&ensp;I didn't want this woman to see the potted plants so I quickly 
 hauled open the big door and pushed my Firebird out.&ensp;A lot of noise and wear and tear starting a cold motor,
@@ -79,8 +82,10 @@ over the seat but I stopped her with a hand on her shoulder.&ensp;Another touch,
 <br/>&emsp;She put her foot on the peg and her hands on my shoulders and swung herself aboard.&ensp;The rear suspension
 sagged with the extra weight but only an inch.&ensp;I tended toward stiff settings.&ensp;I started the bike just
 as my housemate pulled into the drive in his ancient VW Fastback.&ensp;He stopped.&ensp;I waved and she did too.&ensp;
-Then I drove between a couple of bunches of the pink flowers, across the Armenian's new concrete, checked
-over my shoulder, and eased the bike onto Curtner.&ensp;We were only three houses from the light and it was 
+The VW went so slowly down the driveway I figured he was watching us in his mirror.&ensp;
+The low fence didn't extend all the way to the sidewalk so I eased the bike across our driveway, and the 
+Armenian's, between a couple bunches of his flowers, across his new concrete and on to Curtner.&ensp;
+We were only three houses from the light and it was 
 red.&ensp;"Lean into corners with me," I said over my shoulder.&ensp;
 <br/>&emsp;"Okay."&ensp;Her arms were already around my waist, hands clasped.&ensp;While waiting for green,
 she unclasped them and put her palms on my thighs.&ensp;
@@ -92,14 +97,14 @@ We merged at ninety, a limit set by
 <i>thrill-me-but-don't-kill-me</i>, a syndrome originating in infants' memories of
 being tossed in the air by their fathers, something I'd never seen a mother do, undoubtably due to 
 greater investment.&ensp;
-I checked mirror and over my shoulder, caught a glimpse of her smiling,
+I checked my mirror and over my shoulder, caught a glimpse of her smiling in the wind,
 and shifted left to the fast lane.&ensp;I slowed a bit as I recalled having had to switch the
-bike to its reserve tank on my way home which meant we'd left with a little over a half gallon of fuel.&ensp;
+tank to its reserve on my way home which meant we'd left with a little under a half gallon of fuel.&ensp;
 We were halfway through that, but Los Gatos wasn't far.&ensp;We'd make it, but would have to stop.&ensp;
 So we did, at the Chevron, my preferred brand.&ensp;Expensive, but had tested best for burning cleanly.&ensp;
 <br/>&emsp;She seemed to intuit the dismount procedure, but when I felt her hands on my shoulders I said, "Hold on."&ensp;
 I felt some squirrelliness under my right sole, grit and oil.&ensp;It wouldn't do to topple in front of 
-the general public.&ensp;I eased the bike foward with my left foot and felt with my right again.&ensp;
+the general public.&ensp;I eased the bike backward with my left foot and felt with my right again.&ensp;
 Better.&ensp;"Okay."&ensp;
 <br/>&emsp;She hopped off, as neatly as any.&ensp;I liked her.&ensp;I wondered if she was still wearing the bikini
 under her clothes.&ensp;
@@ -194,7 +199,7 @@ Passions are a kind of trap we pay to get into, stay in.&ensp;Or some crap.&ensp
 <br/>&emsp;It was impressive, especially in first gear, the sudden snarl, the car leaping both forward and sideways.&ensp;
 I preferred to initiate first-time passengers with a left-hand turn to push them against their door 
 instead of toward me.&ensp;Though one, fearing defenestration, had tried to grab my arm.&ensp;
-<br/>&emsp;I powered on the stereo.&ensp;Boston, "More Than A Feeling."&ensp;
+<br/>&emsp;I powered on the stereo.&ensp;Floyd, "Have a Cigar."&ensp;
 <br/>&emsp;"Jesus," she said.&ensp;"Do that again."&ensp;
 <br/>&emsp;I took a detour to let her experience the only twisty spot in the neighborhood, Dry Creek Road.&ensp;
 I considered it my testing area.&ensp;
