--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -44,7 +44,7 @@ find a helmet that didn't smell like perfume.&ensp;My last pillion jockey was a 
 <br/>&emsp;She leapt the low fence and loped down the Armenian's driveway in her flip flops.&ensp;I heard his back door 
 open and close.&ensp;I pushed the bike to the front walk to make way in case either of my housemates came home.&ensp;
 My helmet collection was in the garage.&ensp;I didn't want this woman to see the potted plants so I quickly 
-hauled open the big door and pushed my Firebird out.&ensp;A lot of noise and wear and tear starting a cold motor,
+hauled open the big door and pushed my Firebird out.&ensp;A lot of wear and tear starting a cold motor,
 and in those days I enjoyed pushing it, on flat ground anyway.&ensp;I had this idea that it somehow kept
 me honest or appreciative or something.&ensp;Then I went into the garage and closed the big door behind me.&ensp;
 From the grow lights I could see my small collection of brain buckets for smaller heads.&ensp;
@@ -80,12 +80,14 @@ little parking lot.&ensp;I folded down the passenger footpegs and she promptly w
 over the seat but I stopped her with a hand on her shoulder.&ensp;Another touch, procedural again, but still.&ensp;
 "Driver first."&ensp;I got on, flicked the kickstand and said, "Okay."&ensp;
 <br/>&emsp;She put her foot on the peg and her hands on my shoulders and swung herself aboard.&ensp;The rear suspension
-sagged with the extra weight but only an inch.&ensp;I tended toward stiff settings.&ensp;I started the bike just
+sagged with the extra weight but only an inch.&ensp;I tended toward stiff settings.&ensp;
+<br/>&emsp;I started the bike just
 as my housemate pulled into the drive in his ancient VW Fastback.&ensp;He stopped.&ensp;I waved and she did too.&ensp;
 The VW went so slowly down the driveway I figured he was watching us in his mirror.&ensp;
-The low fence didn't extend all the way to the sidewalk so I eased the bike across our driveway, and the 
-Armenian's, between a couple bunches of his flowers, across his new concrete and on to Curtner.&ensp;
-We were only three houses from the light and it was 
+<br/>&emsp;The low fence didn't extend all the way to the sidewalk so I eased the bike across our driveway, and the 
+Armenian's, between a couple bunches of his flowers, and rode a diagonal across his new concrete and on to Curtner.&ensp;
+In case he was watching, I suppose.&ensp;Any good raid involves a trespass.&ensp;
+<br/>&emsp;We were only three houses from the light and it was 
 red.&ensp;"Lean into corners with me," I said over my shoulder.&ensp;
 <br/>&emsp;"Okay."&ensp;Her arms were already around my waist, hands clasped.&ensp;While waiting for green,
 she unclasped them and put her palms on my thighs.&ensp;
@@ -158,7 +160,8 @@ I continued, "--going to the movies?"&ensp;
 She assessed what the dome light revealed and got in.&ensp;
 <br/>&emsp;I came around and hopped in and started the car.&ensp;
 <br/>&emsp;"Ooh."&ensp;
-<br/>&emsp;"I'll let it warm up a bit," I said.&ensp;The dome was off but I turned it back on.&ensp;
+<br/>&emsp;"I'll let it warm up a bit," I said, fiddling the manual choke so I wouldn't have to keep my foot on the gas.&ensp;
+<br/>&emsp;The dome was off but I turned it back on.&ensp;
 <br/>&emsp;She was casually reclined and looking at me.&ensp;Between us was a prototype center console I had 
 whittled from a large piece of smooth-sided rather stiff foam I'd found glued to the inside of a 
 large cardboard box that had contained a very heavy piece of equipment delivered to a company
@@ -287,7 +290,12 @@ I'd seen the bit of shell in the water the last time I'd been.&ensp;It was magic
 around my ankles in the surf.&ensp;It was so elusive I hadn't noticed the sneaker wave that hit me
 waist-high, knocked me over, and stole my towel, a shoe and my sandwich.&ensp;But when I sat up, the
 bit of shell had been in my hand.&ensp;
-<br/>&emsp;Lunch on the wharf made shopping easy.&ensp;I bought her sunglasses and a big hat.&ensp;At the car, I put the
+<br/>&emsp;Lunch on the wharf made shopping easy.&ensp;I bought her sunglasses and a big hat.&ensp;
+Re-accessorizing to dispel previous ownership.&ensp;
+If her bikini had looked new I'd have helped pick out another.&ensp;
+It didn't and I liked the color on her.&ensp;
+I almost did anyway, given its points of contact with her body and possible past.&ensp;
+<br/>&emsp;At the car, I put the
 new towels in the salt-encrusted gym bag that the wave hadn't quite taken, likely because it had
 been weighted down by a nearly new bottle of sunscreen.&ensp;
 <br/>&emsp;I drove north along the coast, noting turnouts where the cliff had been cut nearly to the road by
@@ -300,9 +308,11 @@ We picked our way down the cliff to the tiny beach.&ensp;I spread the new towels
 Two hits apiece and it was getting short.&ensp;I snuffed it against the ragged rock wall.&ensp;
 <br/>&emsp;Sitting on her towel under her big hat she remarked:  "White caps."&ensp;
 <br/>&emsp;"Yeah, I was hoping it'd be a bit warmer.&ensp;Would be with less wind."&ensp;
-<br/>&emsp;She turned.&ensp;"Here."&ensp;She rolled onto her knees while pulling one leg from her panties and putting it
-across me.&ensp;Then she arched her back to unclip her top and let it slide down her arms.&ensp;
-I was warmer.&ensp;It felt like a fashion shoot.&ensp;She kept the hat and shades,
+<br/>&emsp;She turned.&ensp;"Here."&ensp;
+She rolled over and onto me, hands on my shoulders, touching noses.&ensp;Definitely warmer.&ensp;
+After a few seconds she sat up, arching her back to unclip her top and let it slide down her arms.&ensp;
+Her hat was tilted back a bit, points of sky-brightness peeking through intersections of the woven straw,
+a Florentine halo effect, <i>Saint Ray Bans With Attendant Areolae</i>.&ensp;
 <br/>&emsp;We climbed the cliff and reached the top right as another car parked behind mine.&ensp;We said hi as 
 they got out and we got in.&ensp;
 <br/>&emsp;"Ooh," she said, "ahh," squirming on the passenger seat.&ensp;I was glad I'd put sheepskin covers over the vinyl.&ensp;
