--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -309,12 +309,12 @@ Two hits apiece and it was getting short.&ensp;I snuffed it against the ragged r
 <br/>&emsp;Sitting on her towel under her big hat she remarked:  "White caps."&ensp;
 <br/>&emsp;"Yeah, I was hoping it'd be a bit warmer.&ensp;Would be with less wind."&ensp;
 <br/>&emsp;She turned.&ensp;"Here."&ensp;
-She rolled over and onto me, hands on my shoulders, touching noses.&ensp;Definitely warmer.&ensp;
+She rolled over and onto me, hands on my shoulders, delicate rhinal foreplay.&ensp;Definitely warmer.&ensp;
 After a few seconds she sat up, arching her back to unclip her top and let it slide down her arms.&ensp;
-Her hat was tilted back a bit, points of sky-brightness peeking through intersections of the woven straw,
-a Florentine halo effect, <i>Saint Ray Bans With Attendant Areolae</i>.&ensp;
-<br/>&emsp;We climbed the cliff and reached the top right as another car parked behind mine.&ensp;We said hi as 
-they got out and we got in.&ensp;
+Her hat was tilted back a bit, points of sky-brightness peeking through intersections of woven straw,
+a Florentine halo effect, <i>Saint Ray-Ban With Attendant Areolae</i>.&ensp;
+<br/>&emsp;Some time later, we climbed the cliff and reached the top right as another car parked behind mine.&ensp;
+We said hi as they got out and we got in.&ensp;
 <br/>&emsp;"Ooh," she said, "ahh," squirming on the passenger seat.&ensp;I was glad I'd put sheepskin covers over the vinyl.&ensp;
 Completely changes the sun-baked car experience.&ensp;
 <br/>&emsp;I stopped at the taqueria on the edge of town.&ensp;I broke my policy and got a Corona with my carne asada plate,
