--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -316,7 +316,7 @@ a Florentine halo effect, <i>Saint Ray-Ban With Attendant Areolae</i>.&ensp;
 <br/>&emsp;Some time later, we climbed the cliff and reached the top right as another car parked behind mine.&ensp;
 We said hi as they got out and we got in.&ensp;
 <br/>&emsp;"Ooh," she said, "ahh," squirming on the passenger seat.&ensp;I was glad I'd put sheepskin covers over the vinyl.&ensp;
-Completely changes the sun-baked car experience.&ensp;
+Completely changed the sun-baked Firebird experience.&ensp;
 <br/>&emsp;I stopped at the taqueria on the edge of town.&ensp;I broke my policy and got a Corona with my carne asada plate,
 but only drank half.&ensp;She finished hers and fell asleep on the drive home.&ensp;
 <br/>&emsp;And home it apparently was now.&ensp;And I didn't know what to do about that.&ensp;It had never happened
