--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -203,10 +203,10 @@ Passions are a kind of trap we pay to get into, stay in.&ensp;Or some crap.&ensp
 I preferred to initiate first-time passengers with a left-hand turn to push them against their door 
 instead of toward me.&ensp;Though one, fearing defenestration, had tried to grab my arm.&ensp;
 <br/>&emsp;I powered on the stereo.&ensp;Floyd, "Have a Cigar."&ensp;
-<br/>&emsp;"Jesus," she said.&ensp;"Do that again."&ensp;
+<br/>&emsp;"Jesus," she said, rearranging herself.&ensp;"Do that again."&ensp;
 <br/>&emsp;I took a detour to let her experience the only twisty spot in the neighborhood, Dry Creek Road.&ensp;
 I considered it my testing area.&ensp;
-Later the city installed traffic lights along there.&ensp;Closest I'd get to a statue.&ensp;
+Later the city installed traffic signals along there, set to blinking red.&ensp;Closest I'd get to a statue.&ensp;
 <br/>&emsp;The route to the theater had us on El Camino Real.&ensp;Three lanes wide each way, center turn lane,
 and breakout right-turn lanes at each intersection.&ensp;It wasn't a Friday or Saturday night but the Firebird still 
 attracted a friendly challenger at the first red light.&ensp;Vroom, vroom.&ensp;But here she surprised me.&ensp;
@@ -240,7 +240,7 @@ helmets and gloves from the mattresses.&ensp;There was her duffel.&ensp;
 <br/>&emsp;The cats thundered past.&ensp;
 <br/>&emsp;"What's the big orange one called?"&ensp;
 <br/>&emsp;"Leon."&ensp;
-<br/>&emsp;"Right."&ensp;
+<br/>&emsp;"Good."&ensp;
 <br/>&emsp;"What are you called?"&ensp;
 <br/>&emsp;The horns curled tight and eased.&ensp;"Beverly."&ensp;
 <br/>&emsp;"That's a nice name."&ensp;
