--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -131,7 +131,7 @@ he enabled the pump.&ensp;I filled the tank, and closed the cap.&ensp;"Be one se
 and when she saw me eat one she quickly followed suit.&ensp;Her expression was like watching a kaleidoscope
 that settled on fascination with what had happened in her mouth.&ensp;I ordered a glass of dry riesling
 for her.&ensp;
-<br/>&emsp;"Can I have one of these?"&ensp;She was holding her last oyster shell.&ensp;
+<br/>&emsp;When she'd eaten her last oyster, she asked:  "Can I have one of these shells?"&ensp;
 <br/>&emsp;"That's how they come.&ensp;They don't reuse them.&ensp;Wipe it clean, though, before you put it in your pocket."&ensp;
 <br/>&emsp;I watched her pick her favorite and lick a smidge of cheese from its edge.&ensp;Nice hands, no polish.&ensp;
 Nice lips, also bare.&ensp;
@@ -229,8 +229,9 @@ like friendly dogs at a park.&ensp;
 <br/>&emsp;"So."&ensp;She took my hand and we walked out to my car.&ensp;My inner movie had come up with too many
 dialog options for me to choose from.&ensp;
 <br/>&emsp;"I left my bag at your place."&ensp;
-<br/>&emsp;"Right."&ensp;I drove us back to Willow Glen.&ensp;
-<br/>&emsp;No one was staying up for us except the cats who were doing their usual after-dark hardwood floors 
+<br/>&emsp;"Right."&ensp;
+<br/>&emsp;Back in Willow Glen
+no one was still up except the cats who were doing their usual after-dark hardwood floors 
 chase-and-skid games.&ensp;She giggled as they slid past us, bounced off the door and peeled out again.&ensp;
 <br/>&emsp;In my bedroom, I turned on my closet light and cleared the motorcycle jackets,
 helmets and gloves from the mattresses.&ensp;There was her duffel.&ensp;
@@ -379,7 +380,7 @@ dollar bill revealing the horizontal wavy seat springs, one of which had a missi
 Beneath the springs was a piece of plywood.&ensp;
 <br/>&emsp;I told her:  "Ask our driver how that hole came to be."&ensp;
 <br/>&emsp;She peered at him in the mirror as he backed down the driveway.&ensp;
-<br/>&emsp;"Ah," he said.&ensp;"Yeah.&ensp;Well.&ensp;Me and my ex were, uh--"&ensp;
+<br/>&emsp;"Ah," he said.&ensp;"Yeah.&ensp;Well.&ensp;Me and--my ex were, uh--"&ensp;
 <br/>&emsp;"Getting heavy," the coach said.&ensp;
 <br/>&emsp;"--yeah.&ensp;And it turns out that the battery is right underneath the seat.&ensp;So when two people . . .&ensp;
 with two people's weight, it was enough to . . ."&ensp;He was smirking and snorking by now.&ensp;
