--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -75,7 +75,7 @@ new thing too.&ensp;I'd given her the helmet that I guessed would fit best, and 
 that look of surprise at the novelty, the change in sounds.&ensp;Doing the strap brought us close.&ensp;
 <br/>&emsp;"Shake your head a bit."&ensp;Not too much slop.&ensp;"Good to go."&ensp;I lead us out.&ensp;
 <br/>&emsp;"Bye, Fred," she said.&ensp;
-<br/>&emsp;At the front of the house I walked the bike through a three-point turn so it was pointed at the Armenia's
+<br/>&emsp;At the front of the house I walked the bike through a three-point turn so it was pointed at the Armenian's
 little parking lot.&ensp;I folded down the passenger footpegs and she promptly went to sling a leg 
 over the seat but I stopped her with a hand on her shoulder.&ensp;Another touch, procedural again, but still.&ensp;
 "Driver first."&ensp;I got on, flicked the kickstand and said, "Okay."&ensp;
@@ -385,9 +385,11 @@ Beneath the springs was a piece of plywood.&ensp;
 <br/>&emsp;"--yeah.&ensp;And it turns out that the battery is right underneath the seat.&ensp;So when two people . . .&ensp;
 with two people's weight, it was enough to . . ."&ensp;He was smirking and snorking by now.&ensp;
 <br/>&emsp;The coach finished:  "To make the seat springs make contact with the battery terminals."&ensp;
-<br/>&emsp;Beverly started laughing.&ensp;A rich contralto, very infectious.&ensp;It went on for at least two blocks.&ensp;
+<br/>&emsp;I was on the passenger side of the bench and Beverly was crowded against me, as far from the melted vinyl
+as possible.&ensp;She peeked again at the rearview and started laughing.&ensp;A rich contralto, highly contagious.&ensp;
+It went on for at least two blocks.&ensp;She ran down, then covered her mouth and started again.&ensp;
 We were wiping our eyes when we got to the place.&ensp;As she was getting out she gave the hole and 
-springs a quick look and asked:  "Anybody get branded?"&ensp;
+springs another look and asked:  "Anybody get branded?"&ensp;
 <br/>&emsp;I'd never thought to ask.&ensp;
 <br/>&emsp;Mr. Fastback turned pink as Bev's bikini.&ensp;
 <br/>&emsp;We were seated in a booth, were holding menus, and crying so hard we could hardly order.&ensp;
