--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -1,6 +1,6 @@
 <html>
 <body style="margin: 30px; margin-top: 30px;">
-<h3>Hot Pink Bikini</h3>
+<h3>Pink Bikini</h3>
 <p/>
 <i> Apr. 28, 1987 </i>
 <p/>
@@ -19,7 +19,7 @@ concrete so customers of his insurance business had somewhere to park.&ensp;No s
 silent glide toward the back.&ensp;I had a dismount technique where, while gliding, I would stand on 
 the left foot peg and swing my right leg over the seat so that when I feathered the brake to a stop
 I'd be ready to flick the kickstand down, all in one fluid motion, much as I'd do on a bicyclc.&ensp;
-But I stopped at the front because of the woman in the pink bikini with a little watering can 
+But I stopped at the front because of the woman in the bright pink bikini with a little watering can 
 sprinkling the new bunches of flowers edging the new concrete.&ensp;The flowers were pink too.&ensp;
 <br/>&emsp;She sashayed between flowers and across the Armenian's driveway, and stepped over the low fence
 separating the properties.&ensp;
