--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -20,7 +20,7 @@ silent glide toward the back.&ensp;I had a dismount technique where, while glidi
 the left foot peg and swing my right leg over the seat so that when I feathered the brake to a stop
 I'd be ready to flick the kickstand down, all in one fluid motion, much as I'd do on a bicyclc.&ensp;
 But I stopped at the front because of the woman in the bright pink bikini with a little watering can 
-sprinkling the new bunches of flowers edging the new concrete.&ensp;The flowers were pink too.&ensp;
+sprinkling the new bunches of flowers edging the new concrete.&ensp;The flowers were pale in comparison.&ensp;
 <br/>&emsp;She sashayed between flowers and across the Armenian's driveway, and stepped over the low fence
 separating the properties.&ensp;
 She put the tip of her index finger on the top edge of my
