--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -10,8 +10,8 @@ Ours had a long kitchen running half the length of the east side of the house
 with limited counters and space for a breakfast table we didn't have.&ensp;
 Lino, walls, counters, cabinets and ceiling in relentless smiley yellow like some psych experiment.&ensp;
 <br/>&emsp;The driveway to the garage ran along that side of the house.&ensp;My Firebird was in the garage
-keeping my housemate's pot plants company.&ensp;I was convinced they were cross-odorizing each other.&ensp;
-The Bird smelled like indica and the bud tasted faintly of gasoline and tires.&ensp;
+keeping my housemate's pot plants company.&ensp;They were cross-adulterating.&ensp;
+The 'Bird's interior smelled like indica and the bud tasted faintly of gasoline and tires.&ensp;
 <br/>&emsp;The house next door was the mirror layout of ours, so the driveways ran adjacent.&ensp;That house had
 been on the market and recently bought by a smarmy Armenian guy who promptly replaced the front lawn with 
 concrete so customers of his insurance business had somewhere to park.&ensp;No street parking on Curtner Avenue.&ensp;
@@ -184,10 +184,10 @@ Then she eased back against the headrest, holding the joint my way.&ensp;"I like
 <br/>&emsp;"What?"&ensp;
 <br/>&emsp;"What do you mean?&ensp;Style."&ensp;
 <br/>&emsp;"Oh," she said.&ensp;"I don't like pinners."&ensp;
-<br/>&emsp;"Ah," I said.&ensp;"Me neither.&ensp;Taste like paper."&ensp;I snuffed and stowed the J and put the car in gear,
+<br/>&emsp;"Ah," I said.&ensp;"Me neither.&ensp;Taste like paper."&ensp;I snuffed and stowed the J and put the car in reverse,
 easing down the drive.&ensp;Through the kitchen window I saw the coach had just filled a glass with water.&ensp;
-He raised it.&ensp;I flashed him a vee.&ensp;
-<br/>&emsp;To avoid scraping the nose of the Firebird on the street I'd learned the magic angle to ease out.&ensp;
+He raised it.&ensp;I flashed him a vee through the windshield.&ensp;
+<br/>&emsp;To avoid scraping the tailpipes of the Firebird on the street I'd learned the magic angle to ease out.&ensp;
 The light was only a few houses down and I let the car ride its idle into the left turn lane.&ensp;
 While waiting for the green, I said:  "The seat belt is old school."&ensp;
 <br/>&emsp;While she figured out it was a non-retracting affair that needed some fiddling to get straight she said:
@@ -366,18 +366,21 @@ give a bad vibe or . . ."&ensp;
 <br/>&emsp;"Not for me," said the coach.&ensp;
 <br/>&emsp;"She's friends with the cats," I said.&ensp;Breathe, be cool.&ensp;
 <br/>&emsp;"Let's go to the burger place," said the coach.&ensp;"I could go for their Chili Size."&ensp;
-<br/>&emsp;Mr. Fastback was parked best.&ensp;"You driving?" I asked him.&ensp;
-<br/>&emsp;He nodded, seeming disappointed his freak-out was being short-circuited so soon.&ensp;As for the coach,
-I don't think he had any real worries.&ensp;He didn't really own anything worth stealing.&ensp;How much can you 
+<br/>&emsp;Mr. Fastback was parked easiest.&ensp;"You drive?" I asked him.&ensp;
+<br/>&emsp;He nodded, seeking solace in his fedora, disappointed his freak-out was being short-circuited so soon.&ensp;
+As for the coach,
+I don't think he had any real worries, not owning anything worth stealing.&ensp;How much can you 
 get for a second-hand Speedo?&ensp;
 <br/>&emsp;As I turned back toward the house I found myself wondering how they even knew she'd spent the night.&ensp;
 Then I remembered her giggling at the cats.&ensp;And some other noises.&ensp;Jealous, Mr. Fastback.&ensp;
 If you aren't having fun, no one can.&ensp;But as I turned the knob, on another level, yep, driving into fog.&ensp;
 <br/>&emsp;"Hey," I said to Beverly, "we're heading out for burgers."&ensp;
 <br/>&emsp;She powered off the TV and moved the cats.&ensp;They were sharing her lap.&ensp;Wise guys.&ensp;
-<br/>&emsp;She and I climbed into the back of the Fastback.&ensp;There was a hole in the vinyl seat about the size of a
+<br/>&emsp;I popped the passenger door of the Fastback and tilted the seat forward so Beverly and I could get to 
+the backseat bench.&ensp;There was a hole in the vinyl on the driver side about the size of a
 dollar bill revealing the horizontal wavy seat springs, one of which had a missing section.&ensp;
 Beneath the springs was a piece of plywood.&ensp;
+<br/>&emsp;The coach flipped the passenger seat forward and got in.&ensp;Mr. Fastback got behind the wheel.&ensp;
 <br/>&emsp;I told her:  "Ask our driver how that hole came to be."&ensp;
 <br/>&emsp;She peered at him in the mirror as he backed down the driveway.&ensp;
 <br/>&emsp;"Ah," he said.&ensp;"Yeah.&ensp;Well.&ensp;Me and--my ex were, uh--"&ensp;
@@ -385,9 +388,9 @@ Beneath the springs was a piece of plywood.&ensp;
 <br/>&emsp;"--yeah.&ensp;And it turns out that the battery is right underneath the seat.&ensp;So when two people . . .&ensp;
 with two people's weight, it was enough to . . ."&ensp;He was smirking and snorking by now.&ensp;
 <br/>&emsp;The coach finished:  "To make the seat springs make contact with the battery terminals."&ensp;
-<br/>&emsp;I was on the passenger side of the bench and Beverly was crowded against me, as far from the melted vinyl
-as possible.&ensp;She peeked again at the rearview and started laughing.&ensp;A rich contralto, highly contagious.&ensp;
-It went on for at least two blocks.&ensp;She ran down, then covered her mouth and started again.&ensp;
+<br/>&emsp;Beverly crowded against me, wary of the melted vinyl.&ensp;
+She peeked again at the rearview and started laughing.&ensp;A rich contralto, highly contagious.&ensp;
+It went on the first block or so.&ensp;She ran down, then covered her mouth and started again.&ensp;
 We were wiping our eyes when we got to the place.&ensp;As she was getting out she gave the hole and 
 springs another look and asked:  "Anybody get branded?"&ensp;
 <br/>&emsp;I'd never thought to ask.&ensp;
