--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -21,9 +21,8 @@ the left foot peg and swing my right leg over the seat so that when I feathered 
 I'd be ready to flick the kickstand down, all in one fluid motion, much as I'd do on a bicyclc.&ensp;
 But I stopped at the front because of the woman in the bright pink bikini with a little watering can 
 sprinkling the new bunches of flowers edging the new concrete.&ensp;The flowers were pale in comparison.&ensp;
-<br/>&emsp;She sashayed between flowers and across the Armenian's driveway, and stepped over the low fence
-separating the properties.&ensp;
-She put the tip of her index finger on the top edge of my
+<br/>&emsp;She sashayed across the Armenian's driveway to mine,
+and put the tip of her index finger on the top edge of my
 bike's mirror and said:  "I like motorcycles."&ensp;
 <br/>&emsp;Pulling off my helmet gave me a few seconds.&ensp;I said:  "It doesn't need watering."&ensp;
 <br/>&emsp;"How 'bout you?"&ensp;She raised her can.&ensp;
@@ -41,7 +40,8 @@ I had a spare leather jacket and gloves.&ensp;I had a helmet that would fit her,
 <br/>&emsp;"Okay.&ensp;When?"&ensp;
 <br/>&emsp;"Knock on the back door.&ensp;I've got to check my answering machine."&ensp;I did not.&ensp;But I needed to 
 find a helmet that didn't smell like perfume.&ensp;My last pillion jockey was a real spritzer.&ensp;
-<br/>&emsp;She leapt the low fence and loped down the Armenian's driveway in her flip flops.&ensp;I heard his back door 
+<br/>&emsp;She leapt the symbolic dirt strip separating the driveways and loped toward the back of the Armenian's
+in her flip flops.&ensp;I heard his back door 
 open and close.&ensp;I pushed the bike to the front walk to make way in case either of my housemates came home.&ensp;
 My helmet collection was in the garage.&ensp;I didn't want this woman to see the potted plants so I quickly 
 hauled open the big door and pushed my Firebird out.&ensp;A lot of wear and tear starting a cold motor,
@@ -84,8 +84,8 @@ sagged with the extra weight but only an inch.&ensp;I tended toward stiff settin
 <br/>&emsp;I started the bike just
 as my housemate pulled into the drive in his ancient VW Fastback.&ensp;He stopped.&ensp;I waved and she did too.&ensp;
 The VW went so slowly down the driveway I figured he was watching us in his mirror.&ensp;
-<br/>&emsp;The low fence didn't extend all the way to the sidewalk so I eased the bike across our driveway, and the 
-Armenian's, between a couple bunches of his flowers, and rode a diagonal across his new concrete and on to Curtner.&ensp;
+<br/>&emsp;I eased the bike across our driveway, between a couple bunches of the Armenian's flowers in the dirt strip,
+then acrross his driveway and rode a diagonal across his new concrete, off the curb and onto Curtner.&ensp;
 In case he was watching, I suppose.&ensp;Any good raid involves a trespass.&ensp;
 <br/>&emsp;We were only three houses from the light and it was 
 red.&ensp;"Lean into corners with me," I said over my shoulder.&ensp;
