--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -156,7 +156,7 @@ I said, "We're--"&ensp;I looked at her.&ensp;She'd been looking at the spectator
 I continued, "--going to the movies?"&ensp;
 <br/>&emsp;"Sure," she said.&ensp;Her eyes were blue anywhere.&ensp;
 <br/>&emsp;"Nice," said the coach.&ensp;"Have fun, guys."&ensp;
-<br/>&emsp;Out the back door, I walked around and opened the passenger door of the Firebird.&ensp;
+<br/>&emsp;Out the back door, I opened the passenger door of the Firebird.&ensp;
 She assessed what the dome light revealed and got in.&ensp;
 <br/>&emsp;I came around and hopped in and started the car.&ensp;
 <br/>&emsp;"Ooh."&ensp;
