--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -20,7 +20,7 @@ silent glide toward the back.&ensp;I had a dismount technique where, while glidi
 the left foot peg and swing my right leg over the seat so that when I feathered the brake to a stop
 I'd be ready to flick the kickstand down, all in one fluid motion, much as I'd do on a bicyclc.&ensp;
 But I stopped at the front because of the woman in the bright pink bikini with the little watering can 
-sprinkling the new bunches of flowers edging the new concrete.&ensp;The flowers were pale in comparison.&ensp;
+sprinkling the new bunches of flowers edging the new concrete.&ensp;The flowers paled.&ensp;
 <br/>&emsp;She sashayed across the Armenian's driveway to mine,
 and put the tip of her index finger on the top edge of my
 bike's mirror and said:  "I like motorcycles."&ensp;
@@ -178,10 +178,10 @@ who owned a camera.&ensp;Inside was some desiccated bud and a half-finished join
 and handed it to her.&ensp;
 <br/>&emsp;"You roll this?" she asked, sparking the lighter.&ensp;
 <br/>&emsp;"Yep," I answered, wondering.&ensp;
-<br/>&emsp;She took a cautious hit, rolled down her window, and exhaled toward the Armenian's back yard.&ensp;
+<br/>&emsp;She took a cautious hit, rolled down her window, and exhaled toward my housemates' cars.&ensp;
 Then she eased back against the headrest, holding the joint my way.&ensp;"I like your style."&ensp;
 <br/>&emsp;I took a hit and lowered the driver's side window.&ensp;"What?"&ensp;
-<br/>&emsp;"What?"&ensp;
+<br/>&emsp;"What?" she echoed.&ensp;
 <br/>&emsp;"What do you mean?&ensp;Style."&ensp;
 <br/>&emsp;"Oh," she said.&ensp;"I don't like pinners."&ensp;
 <br/>&emsp;"Ah," I said.&ensp;"Me neither.&ensp;Taste like paper."&ensp;I snuffed and stowed the J and put the car in reverse,
@@ -264,7 +264,7 @@ It stayed on.&ensp;
 <br/>&emsp;Morning came with the scrape and soft slam of the back door opening and closing.&ensp;
 <br/>&emsp;Out my window I saw the coach get into his Civic.&ensp;The Fastback was already gone.&ensp;I'd slept well.&ensp;I usually do.&ensp;
 <br/>&emsp;Beverly was sitting on the edge of the mattress reading my journal.&ensp;It was a large sketch pad 
-because I didn't like my private thoughts to be ruled.&ensp;I used a Fountain Pentel for it's 
+because I didn't like to see my thoughts ruled.&ensp;I used a Fountain Pentel for it's 
 flexible tip.&ensp;Occasionally, a letter stroke would release tension and with it a delicate spray of blue.&ensp;
 <br/>&emsp;"You have nice penmanship."&ensp;
 <br/>&emsp;"So do you."&ensp;Silly, but my intent came across.&ensp;
@@ -390,7 +390,7 @@ with two people's weight, it was enough to . . ."&ensp;He was smirking and snork
 <br/>&emsp;The coach finished:  "To make the seat springs make contact with the battery terminals."&ensp;
 <br/>&emsp;Beverly crowded against me, wary of the melted vinyl.&ensp;
 She peeked again at the rearview and started laughing.&ensp;A rich contralto, highly contagious.&ensp;
-It went on the first block or so.&ensp;She ran down, then covered her mouth and started again.&ensp;
+It went on for the first block or so.&ensp;She ran down, then covered her mouth and started again.&ensp;
 We were wiping our eyes when we got to the place.&ensp;As she was getting out she gave the hole and 
 springs another look and asked:  "Anybody get branded?"&ensp;
 <br/>&emsp;I'd never thought to ask.&ensp;
