--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -295,7 +295,7 @@ bit of shell had been in my hand.&ensp;
 Re-accessorizing to dispel previous ownership.&ensp;
 If her bikini had looked new I'd have helped pick out another.&ensp;
 It didn't and I liked the color on her.&ensp;
-I almost did anyway, given its points of contact with her body and possible past.&ensp;
+A close call, given its points of contact with her body and possible past.&ensp;
 <br/>&emsp;At the car, I put the
 new towels in the salt-encrusted gym bag that the wave hadn't quite taken, likely because it had
 been weighted down by a nearly new bottle of sunscreen.&ensp;
